update post likes
