# server/routes/social.js
@@ -4,6 +4,7 @@ module.exports = (express, postsController, md_auth, multer) => {
     api.post("/addPost", [md_auth.ensureAuth, multer.single("image")], postsController.addPost);
     api.get("/getPosts", md_auth.ensureAuth, postsController.getAllPosts);
     api.get("/filterPosts/:filters", md_auth.ensureAuth, postsController.getFilterPosts);
-    api.patch("/updateLikes", md_auth.ensureAuth, postsController.updateLikes);
+    api.patch("/addLike", md_auth.ensureAuth, postsController.addLike);
+    api.patch("/removeLike", md_auth.ensureAuth, postsController.removeLike);
     return api;
 };
